@@ -10,6 +10,10 @@ Lib/
   processing first result
 * Better log data written when invoking ldap.LDAPLock.acquire() and
   ldap.LDAPLock.release()
+* LDAPObject and friends now pass `desc' to ldap.LDAPLock() which
+  results in better logging
+* ldapobject.ReconnectLDAPObject now uses internal class-wide
+  lock for serializing reconnects
 
 Modules/
 * Added support for retrieving negotiated TLS version/cipher
@@ -1070,4 +1074,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.307 2013/11/23 14:11:18 stroeder Exp $
+$Id: CHANGES,v 1.308 2013/11/23 14:15:33 stroeder Exp $
